Bug chrome (blocs positionnés relatifs). Bug tout le monde se réduit quand on en réduit un. Bug graphique les liens restent visible quand on change de bloc Ajout d'une mini-console de débogage javascript assez crue (plutôt!) Action par défaut dans la recherche (édition pour l'instant) Susucre graphique pour la recherche (bloc en cours d'édition en vert, changement de fond au survol de la souris pour les résultats) Mini-corrections sur le rapport TODO : nettoyer bloc.js et en déporter une partie dans log.js !!!
git-svn-id: https://projetud.info-ufr.univ-montp2.fr/svn/flin607-2009-gduperon@30 5d9ba3ac-444b-4713-9fb3-0b58e79229a2

--- a/jside/style.css
+++ b/jside/style.css
@@ -6,7 +6,11 @@ body {
 
 
 
-/* Tous */
+/* Boutons */
+
+.log form {
+    display: inline-block;
+}
 
 .bouton {
     display: inline-block;
@@ -119,6 +123,14 @@ body {
 
 #resultats-recherche td {
     border-bottom: thin solid lightgray;
+}
+
+#resultats-recherche tr:hover td {
+    background-color: #fed;
+}
+
+#resultats-recherche .actif td {
+    background-color: #efd;
 }
 
 #resultats-recherche th {
